added responsive for extra small device

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;600;700&family=Roboto:wght@100;300;400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -28,10 +29,13 @@
                         <li><a href="#nav">home</a></li>
                         <li><a href="#about">about</a></li>
                         <li><a href="#portfolio">portfolio</a></li>
-                        <li><a href="#service">srvice</a></li>
+                        <li><a href="#service">service</a></li>
                         <li><a href="#journal">journal</a></li>
                         <li><a href="#contact">contact</a></li>
                     </ul>
+                </div>
+                <div id="toggle-btn">
+                    
                 </div>
             </div>
         </div>
@@ -107,16 +111,16 @@
 
         <div class="socialImageMain">
             <div class="socialImage">
-                <img height="327" width="400" src="Images/instra01.jpg" alt="">
+                <img src="Images/instra01.jpg" alt="">
             </div>
             <div class="socialImage">
-                <img height="327" width="400" src="Images/instra02.jpg" alt="">
+                <img src="Images/instra02.jpg" alt="">
             </div>
             <div class="socialImage">
-                <img height="327" width="400" src="Images/instra03.jpg" alt="">
+                <img src="Images/instra03.jpg" alt="">
             </div>
             <div class="socialImage">
-                <img height="327" width="400" src="Images/instra04.jpg" alt="">
+                <img src="Images/instra04.jpg" alt="">
             </div>
         </div>
         <div class="socialLink">
@@ -195,7 +199,7 @@
     <!-- =========== journal section end here ===========    -->
 
     <!-- =========== about section start here ===========    -->
-    <section id="about">
+   <section id="about">
         <div class="container">
             <div class="aboutHeadingMain">
                 <div class="aboutHeading">
@@ -211,7 +215,7 @@
             <div class="aboutMeMain">
                 <div class="aboutMe">
                     <div class="aboutMeImage">
-                        <img width="196" src="Images/about.jpg" alt="about me">
+                        <img src="Images/about.jpg" alt="about me">
                     </div>
                     <div class="aboutMeDescription">
                         <p>Maecenas faucibus molli interdum. Cras mattis consectetur purus sitor amet sed donec
@@ -272,7 +276,7 @@
 
     <!-- =========== contact section start here ===========    -->
 
-    <section id="contact">
+   <section id="contact">
         <div class="container">
             <div class="contactMain">
                 <div class="contactItem">
@@ -328,6 +332,8 @@
 
 
     <script src="https://kit.fontawesome.com/667aadf96a.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
