--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="menuArea">
                 <div class="logo">
-                    <img src="images/logo.png" alt="logo">
+                    <img src="Images/logo.png" alt="logo">
                 </div>
                 <div class="menu">
                     <ul>
